--- a/style.css
+++ b/style.css
@@ -1,26 +1,42 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700;800&display=swap");
 
+:root {
+  --backgroundColorSecondary: rgb(71, 71, 71);
+  --backgroundColorPrimary: rgb(225, 218, 218);
+
+  --textColorPrimary: rgb(163, 140, 120, 1);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgb(71, 71, 71);
+  background-color: var(--backgroundColorSecondary);
   list-style-type: none;
   text-decoration: none;
   font-family: "Playfair Display", serif;
 }
+
+/* Header */
 header {
   display: flex;
   padding: 10px;
-  background-color: white;
+  background-color: var(--backgroundColorPrimary);
   color: white;
   height: 100px;
   justify-content: space-between;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.4);
+}
+.navMenu {
+  display: flex;
+  background-color: var(--backgroundColorPrimary);
+  justify-content: space-between;
+  width: 1750px;
 }
 ul {
   display: flex;
   gap: 20px;
-  background-color: white;
+  background-color: var(--backgroundColorPrimary);
   color: white;
   gap: 100px;
   margin-right: 200px;
@@ -28,13 +44,90 @@ ul {
   align-items: center;
 }
 li {
-  background-color: white;
+  background-color: var(--backgroundColorPrimary);
   color: white;
 }
-a {
-  background-color: white;
-  color: rgb(163, 140, 120, 1);
+.navMenu a {
+  background-color: var(--backgroundColorPrimary);
+  color: var(--textColorPrimary);
+  font-weight: 600;
+  font-size: 15px;
 }
-img {
-  height: 90px;
+
+/* Main hero */
+.hero {
+  display: flex;
+  padding: 10px;
+  align-items: center;
+  justify-content: space-between;
+  text-align: left;
+}
+
+.hero h1 {
+  color: var(--textColorPrimary);
+  font-size: 100px;
+  font-weight: 700;
+  margin-bottom: 40px;
+}
+.hero p {
+  color: var(--textColorPrimary);
+  font-size: 35px;
+  font-weight: 500;
+}
+.hero img {
+  height: 468px;
+  width: 1000px;
+}
+.heroButtons {
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  gap: 30px;
+  margin-top: 50px;
+}
+.hero button {
+  border-radius: 8px;
+  background-color: transparent;
+  font-size: 20px;
+}
+/*Hero  Amenities */
+.amenities {
+  display: flex;
+  margin: 50px 20px;
+  justify-content: space-around;
+}
+.amenities div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px;
+}
+.amenities img {
+  max-width: 40px;
+  max-height: 40px;
+  max-width: 30px;
+  max-height: 30px;
+}
+.hero span {
+  color: var(--textColorPrimary);
+  font-size: 15px;
+  font-weight: 200;
+}
+
+/* Descripcióm General */
+
+.generalDescription {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 100px 20px;
+  font-size: 30px;
+  font-weight: 300;
+  text-align: justify;
+  background-color: var(--backgroundColorPrimary);
+  border-radius: 10px;
+}
+.generalDescription p {
+  background-color: var(--backgroundColorPrimary);
+  color: var(--textColorPrimary);
 }
