--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@ li {
   background-color: var(--backgroundColorPrimary);
   color: var(--textColorPrimary);
   font-weight: 600;
-  font-size: 15px;
+  font-size: 20px;
 }
 
 /* Main hero */
@@ -75,7 +75,7 @@ li {
   font-weight: 500;
 }
 .hero img {
-  height: 468px;
+  height: 490px;
   width: 1000px;
 }
 .heroButtons {
@@ -85,10 +85,14 @@ li {
   gap: 30px;
   margin-top: 50px;
 }
+/* Buttons  */
 .hero button {
   border-radius: 8px;
+  border: 3px solid var(--textColorPrimary);
   background-color: transparent;
   font-size: 20px;
+  cursor: pointer;
+  padding: 10px 15px;
 }
 /*Hero  Amenities */
 .amenities {
