--- a/style.css
+++ b/style.css
@@ -33,6 +33,9 @@ header {
   justify-content: space-between;
   width: 1750px;
 }
+.navMenu img {
+  border-radius: 50%;
+}
 ul {
   display: flex;
   gap: 20px;
@@ -61,22 +64,23 @@ li {
   align-items: center;
   justify-content: space-between;
   text-align: left;
+  flex-direction: column;
 }
 
 .hero h1 {
   color: var(--textColorPrimary);
-  font-size: 100px;
+  font-size: 60px;
   font-weight: 700;
   margin-bottom: 40px;
 }
 .hero p {
   color: var(--textColorPrimary);
   font-size: 35px;
-  font-weight: 500;
+  font-weight: 300;
 }
 .hero img {
-  height: 490px;
-  width: 1000px;
+  height: 484px;
+  margin-top: 15px;
 }
 .heroButtons {
   display: flex;
@@ -123,7 +127,7 @@ li {
 .generalDescription {
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   margin: 100px 20px;
   font-size: 30px;
   font-weight: 300;
@@ -134,4 +138,146 @@ li {
 .generalDescription p {
   background-color: var(--backgroundColorPrimary);
   color: var(--textColorPrimary);
+}
+/* Titulo Habitaciones */
+h2 {
+  display: flex;
+  justify-content: center;
+  padding: 10px;
+  margin: 10px;
+  font-size: 60px;
+  color: var(--textColorPrimary);
+  font-weight: 500;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+}
+
+/* Cards */
+.cardSection {
+  display: flex;
+  padding: 10px;
+  margin: 10px;
+  flex-wrap: wrap;
+  border-radius: 10px;
+  background-color: var(--backgroundColorPrimary);
+  justify-content: space-between;
+  max-width: 1200px;
+}
+.cardSection img {
+  background-color: var(--backgroundColorPrimary);
+  height: 280px;
+  width: 280px;
+  border-radius: 5px;
+  border-radius: 5px;
+}
+.cardProduct {
+  display: flex;
+  flex-direction: column;
+  border-radius: 5px;
+  border-radius: 10px;
+  width: 330px;
+  margin: 10px;
+  padding: 10px;
+  align-items: center;
+}
+.cardInfo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 15px;
+  font-weight: 300;
+  color: var(--textColorPrimary);
+  margin-top: 10px;
+  width: 280px;
+}
+.cardInfo h3 {
+  font-weight: 800;
+}
+.cardInfo span {
+  align-items: center;
+  font-size: 15px;
+}
+.cardPrice {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 280px;
+
+  margin-top: 10px;
+}
+.cardPrice span {
+  font-weight: 600;
+  color: var(--textColorPrimary);
+}
+.cardPrice button {
+  border-radius: 8px;
+  background-color: transparent;
+  border: 3px solid var(--textColorPrimary);
+  font-size: 15px;
+  cursor: pointer;
+  padding: 5px;
+}
+
+/* Contacto */
+
+.contactenos {
+  display: flex;
+  margin: 20px;
+}
+.heroContact img {
+  width: 500px;
+  height: 250px;
+}
+.heroContact {
+  display: flex;
+  width: 1200px;
+  justify-content: space-between;
+}
+.contacto {
+  display: flex;
+  flex-direction: column;
+}
+.contacto h3 {
+  font-size: 30px;
+  color: var(--textColorPrimary);
+  font-weight: 500;
+}
+
+.datos {
+  display: flex;
+  align-items: end;
+  gap: 200px;
+  margin-top: 30px;
+  color: var(--textColorPrimary);
+  font-size: 18px;
+  font-weight: 300;
+}
+
+/* Footer */
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: black;
+}
+footer img {
+  height: 120px;
+  width: 120px;
+  border-radius: 50%;
+  padding: 2px;
+  background-color: black;
+}
+footer div {
+  background-color: black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+footer a {
+  background-color: black;
+  color: white;
+  gap: 20px;
 }
